@@ -284,3 +284,27 @@ IDENTIFIER = _watch_oracle
 
 OPTIONS = FAILED_LOGIN_REPORT, TNSPING, CURSORS
 
+# -----
+# Additional Encodings
+#
+# The alert.log is written in the character set of the database and no setting can change that.
+# There can be a lot of different character sets and each may have its own funny characters.
+# To get as close as possible, the watch_oracle.pl will try to guess (!) the encoding of any 
+# read line from the alert.log. 
+# To reduce the needed time/performance for guessing, this is the list of encodings that are checked 
+# (utf8, cp1251 and some others are already checked by default).
+#
+# Run something like:
+#    use Encode;
+#    my @complete_list = Encode->encodings(":all");
+#    foreach my $enc (@complete_list) {
+#      print "$enc  ";
+#    }
+#    print "\n";
+# as perl script to get the complete list.
+#
+# Use a space-separated list
+
+ADDITIONAL_ENCODINGS = iso-8859-15 iso-8859-1 iso-8859-2 iso-8859-3 iso-8859-4
+
+
